tests/should_fail/type_mismatch_assign.nv
module type_mismatch_assign
// SHOULD FAIL: assigning Int to a String variable
let x: String = "hello"
x = 999
